fix spacing and size of middle photo

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ main {
 }
 
 .vancouver-img {
-    transform: translate(-50%, -50%) scale(1.1) !important;
+    transform: translate(-50%, -50%) !important;
 }
 
 .content {
